PlaTo-85: fixed flex-wrap and width bug

--- a/frontend/themes/BesserTanken/styles.css
+++ b/frontend/themes/BesserTanken/styles.css
@@ -10,16 +10,16 @@
 
 html, body, #outlet {
     height: 100%;
-    width: 98%;
+    width: 100%;
 }
 
 body {
-    margin: 20px;
+    padding: 20px;
 }
 
 .horizontal-layout {
     display: flex;
-    /*flex-wrap: wrap;*/
+    flex-wrap: wrap;
     gap: 20px;
     padding: 0;
     margin: 0;
@@ -36,12 +36,8 @@ body {
 @media (max-width: 1400px) {
     .horizontal-layout > * {
         width: 100%;
-        margin: 0 10px;
+        margin: 0;
         padding: 0;
-    }
-
-    .search-button {
-        margin-bottom: 0;
     }
 
     .header-layout {
